Add cy variable as global in eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,7 @@
         "jsx-a11y/href-no-hash": "off"
     },
     "globals": {
-        "graphql": true
+        "graphql": true,
+        "cy": true
     }
 }
